manifests/underpost-engine-backup-access.yaml
apiVersion: v1
kind: Pod
metadata:
  name: backup-access
spec:
  containers:
    - name: busybox
      image: busybox
      command: ['sh', '-c', 'sleep 3600']
      volumeMounts:
        - name: backup-storage
          mountPath: /backup
  volumes:
    - name: backup-storage
      persistentVolumeClaim:
        claimName: backup-pvc
