manifests/envoy-service-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: envoy
  name: envoy
  namespace: default
spec:
  externalTrafficPolicy: Cluster
  ports:
    - name: http
      nodePort: 30080
      port: 80
      protocol: TCP
      targetPort: 8080
    - name: https
      nodePort: 30443
      port: 443
      protocol: TCP
      targetPort: 8443
  selector:
    app: envoy
  type: NodePort
